fix: correción de versionado

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,15 +4,15 @@ on:
     push:
         branches:
             - main # Dispara el flujo al hacer push en main
-            - 'feature/*' # Opcional: Agrega ramas de características si quieres que también corran los tests en ellas
+            - "feature/*" # Opcional: Agrega ramas de características si quieres que también corran los tests en ellas
 
 jobs:
     test_and_publish:
         runs-on: ubuntu-latest
 
         permissions:
-            contents: write        # Permiso para crear y actualizar contenidos (tags, releases)
-            pull-requests: write   # Permiso para crear y actualizar PRs
+            contents: write # Permiso para crear y actualizar contenidos (tags, releases)
+            pull-requests: write # Permiso para crear y actualizar PRs
 
         steps:
             - name: Checkout code
@@ -36,7 +36,7 @@ jobs:
               uses: google-github-actions/release-please-action@v3
               with:
                   release-type: "node"
-                  package-name: "@nodepress-net/client"  # Reemplaza "tu-paquete" con el nombre de tu paquete en package.json
+                  package-name: "@nodepress-net/client" # Reemplaza "tu-paquete" con el nombre de tu paquete en package.json
                   token: ${{ secrets.GITHUB_TOKEN }}
 
             # Obtiene la versión desde package.json para usarla en el nombre del release
@@ -61,10 +61,10 @@ jobs:
 
             # Despliegue continuo a npm si es una release en main
             #- name: Publish to npm
-              #if: github.ref == 'refs/heads/main' && success()
-              #run: npm publish
-              #env:
-                  #NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+            #if: github.ref == 'refs/heads/main' && success()
+            #run: npm publish
+            #env:
+            #NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
 env:
-    ACTIONS_STEP_DEBUG: true  # Habilita el modo debug para obtener detalles adicionales en el log
+    ACTIONS_STEP_DEBUG: true # Habilita el modo debug para obtener detalles adicionales en el log
